위치 입력 전에 데이터 표시하지 않게 수정